--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "underscore": "~1.*",
     "underscore.string": "~2.*",
     "jquery": "~1.*",
-    "todomvc-common": "~0.1.9"
+    "todomvc-common": "~0.1.9",
+    "text": "~2.*"
   }
 }
