--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "underscore": "~1.*",
     "underscore.string": "~2.*",
     "jquery": "~1.*",
-    "todomvc-common": "~0.1.*",
+    "todomvc-app-css": "~1.0.*",
     "text": "~2.*",
     "momentjs": "~2.*",
     "backbone.localStorage": "~1.1.*"
